fixing small issue with text alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -232,6 +232,10 @@ html:not(.wf-doc) {
 
 .tabsh-text {
     max-width: 16ch;
+
+    @media (max-width: 768px) {
+        max-width: 100%;
+    }
 }
 
 .w-tabs {
